31日线上修正2

--- a/trunk/app/views/application/footers/_flo_footer.html.erb
+++ b/trunk/app/views/application/footers/_flo_footer.html.erb
@@ -14,7 +14,7 @@
           <a href="/welcome/about#ktv">关于我们</a>
         </li>
         <li class="noslash">
-          <a href="/cpanel">后台管理</a>
+          <a href="/cpanel" target="_blank">后台管理</a>
         </li>
       </ul>
     </div>
