--- a/trunk/app/views/application/footers/_qua_footer.html.erb
+++ b/trunk/app/views/application/footers/_qua_footer.html.erb
@@ -11,7 +11,7 @@
   								<li><span class="bullet"> • </span></li>
   								<li class="tos"><a href="/welcome/about">关于我们</a></li>
   								<li><span class="bullet"> • </span></li>
-  								<li class="help"><a href="/cpanel">团队后台</a></li>
+  								<li class="help"><a href="/cpanel" target="_blank">团队后台</a></li>
   								<li><span class="bullet"> • </span></li>
   								<li class="shuffle"><a href="/welcome/shuffle">手气不错</a></li>
   							</ul>
