--- a/trunk/app/views/coursewares/mine.html.erb
+++ b/trunk/app/views/coursewares/mine.html.erb
@@ -63,7 +63,7 @@
 </a>
 </li>
 <li>
-<a class="gray block usernumber" href="/bds/1141902"><%=current_user.coursewares_count%><br />
+<a class="gray block usernumber" href="/users/<%= current_user.slug %>"><%=current_user.coursewares_count%><br />
 <span>课件</span></a>
 </li>
 </ul>
