--- a/trunk/app/views/welcome/about.html.erb
+++ b/trunk/app/views/welcome/about.html.erb
@@ -22,7 +22,7 @@
 			<p>请点击左侧栏了解我们的团队。</p>
 		</div>
 		<div id="minqi">
-			<h2>潘旻琦 <em style="font-size:12px">工程师</em></h2>
+			<h2>潘旻琦 <em style="font-size:12px">工程师 & CTO</em></h2>
 			<p>首都师范大学数学科学学院四年级学生. </p>
 			<h3>简历</h3>
 			<ul class="website">
