--- a/trunk/app/views/application/footers/_qa_footer.html.erb
+++ b/trunk/app/views/application/footers/_qa_footer.html.erb
@@ -2,7 +2,7 @@
   <a href="/">返回首页</a> |
   <a href="/welcome/shuffle">手气不错</a> |
   <a href="/welcome/about#ktv">关于我们</a> |
-  <a href="/cpanel">后台管理</a>
+  <a href="/cpanel" target="_blank">后台管理</a>
 
   <div class="copyright">
     版权所有 <span class="en">&copy;</span> <%= Time.now.year %> <a href="http://<%=Setting.ktv_domain%>">Kejian.TV</a>. 课件著作权为原作者所有.
