--- a/trunk/app/views/application/footers/_sdk_footer.html.erb
+++ b/trunk/app/views/application/footers/_sdk_footer.html.erb
@@ -7,7 +7,7 @@
         <a href="/">返回首页</a>
         <a href="/welcome/shuffle">手气不错</a>
         <a href="/welcome/about#ktv">关于我们</a>
-        <a href="/cpanel">后台管理</a>
+        <a href="/cpanel" target="_blank">后台管理</a>
       </p>
     </div>
   </footer>
