线下修复与关注页开发

--- a/trunk/app/assets/javascripts/ktv/pin.js.erb
+++ b/trunk/app/assets/javascripts/ktv/pin.js.erb
@@ -245,7 +245,7 @@ im20consts.constData = eval({
     URI_CERTIFY_GET: "/certify/users/get/{userId}",
     URI_CERTIFY_PERSON: "/certify/person/{page}",
     URI_CERTIFY_SHOP: "/certify/shop/{page}",
-    URI_INDEX_ZHIMEI_STAR_REFRESH: "/index/zhimei/star/refresh",
+    URI_INDEX_ZHIMEI_STAR_REFRESH: "/ajax/star_refresh",
     URI_INDEX_EXCHANGE_REFRESH: "/index/exchange/refresh",
     URI_INDEX_SHOPPING_REFRESH: "/index/shopping/refresh",
     URI_INDEX_COMMENT_REFRESH: "/index/comment/refresh",
