--- a/trunk/app/views/welcome/about.html.erb
+++ b/trunk/app/views/welcome/about.html.erb
@@ -9,7 +9,7 @@
 			<li><a  href="#liber"><em>工程师</em> 刘理博</a></li>
 			<li><a  href="#sounder"><em>工程师</em> 刘晟源</a></li>
 			<li><a  href="#zongzhen"><em>工程师</em> 刘总真</a></li>
-			<li><a  href="#xiaobin"><em>设计师</em> 吴晓斌</a></li>
+			<li><a  href="#jiayu"><em>线下业务</em> 张家雨</a></li>
 			<li><a  href="#luda"><em>产品经理</em> 卢达</a></li>
 			<li><a  href="#yafei"><em>运营</em> 邱亚飞</a></li>
 		</ul>
@@ -60,6 +60,14 @@
 			<h3>联系方式</h3>
 			<ul>
         <li class="email"><a title="Send me an email (Opens your default client)"   href="mailto:alwaysreal_liu@163.com">电子邮箱</a></li>
+			</ul>
+		</div>
+		<div id="jiayu">
+			<h2>张家雨 <em style="font-size:12px">线下业务</em></h2>
+			<p>首都师范大学数学科学学院四年级学生. </p>
+			<h3>联系方式</h3>
+			<ul>
+        <li class="email"><a title="Send me an email (Opens your default client)"   href="mailto:jiayu_1129@126.com">电子邮箱</a></li>
 			</ul>
 		</div>
 		
