--- a/trunk/app/views/layouts/application.html.erb
+++ b/trunk/app/views/layouts/application.html.erb
@@ -82,7 +82,7 @@
     <div class="wrapper">
       <h1><a href="/" id="core_logotext_wrap"><%= image_tag "logotext-all.png",:alt => "课件交流系统",:id=>'core_logotext' %></a></h1>
       <form accept-charset="UTF-8" action="/search" id="search_form" method="get" data-width-tobe="730">
-        <input type="text" id="q" name="q" value="" autocomplete="off" class="placeholded" placeholder="快速搜索领域、资源..." />
+        <input type="text" id="q" name="q" value="" class="placeholded" placeholder="快速搜索领域、用户及资源..." />
       </form>
       <div class="navigation">
         <ul>
