--- a/trunk/app/views/coursewares/new.html.erb
+++ b/trunk/app/views/coursewares/new.html.erb
@@ -7,8 +7,13 @@
       <div class="wrapper">
         <div class="primary_info" id="biaozhu_cw" style="display:none">
           <h1>标注课件信息</h1>
-
-  <p><label for="presentation_title">课件标题</label> <input class="text" id="presentation_title" name="presentation[title]" size="30" type="text" placeholder="例如：[北京大学]郭懋正:2011阅读与练习第1次"  value="<%= cookies[:presentation_pretitle] %><%= ': ' if cookies[:presentation_pretitle].present? %>"/></p>
+<p>          请标注课件的原作者，系统可自动识别以下三种标题格式：<br />
+          1、[学校名] 作者姓名: 课件名<br />
+          2、@作者姓名: 课件名<br />
+          3、@已存在用户的个性域名: 课件名
+</p>
+  <p><label for="presentation_title">课件标题</label><br />
+     <input class="text" id="presentation_title" name="presentation[title]" size="30" type="text" placeholder="例如：[北京大学]郭懋正:2011阅读与练习第1次"  value="<%= cookies[:presentation_pretitle] %><%= ': ' if cookies[:presentation_pretitle].present? %>"/></p>
   <p><label for="presentation_topic">领域</label> <input class="text" id="presentation_topic" name="presentation[topic]" size="30" type="text" placeholder="例如：数学分析" value="<%= cookies[:presentation_topic] %>"/></p>
 
   <p class="submit">
