差点弄的没法换头像了

--- a/trunk/app/views/topics/show.html.erb
+++ b/trunk/app/views/topics/show.html.erb
@@ -209,7 +209,7 @@ function queryExec(){
         }
     });
     autoLayout.eachAction(jsonUrl);
-    
+    App.psvr_wendao_init();    
     $('#__w2_P47vozg_inline_editor_link').click(function() {
       $(this).hide();
       $('#the_question_topic_selector').show();
