--- a/trunk/app/views/users/show.html.erb
+++ b/trunk/app/views/users/show.html.erb
@@ -201,7 +201,7 @@ function queryExec(){
         }
     });
     autoLayout.eachAction(jsonUrl);
-    
+    App.psvr_wendao_init();
 }
 im(function () {
     queryExec();
